# kernava-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  E2E_TEST_REPORT.md  LICENSE-APACHE  LICENSE-MIT  README.md  REVIEW_2026-07-15.md
.github/workflows/: ci.yml
.omo/plans/: fix-macos-ci.md
.omo/run-continuation/: ses_09bf9c0eaffeKdbNULJ6sEElnp.json  ses_09bfdf98bffe11Zoxp2yBIx8qH.json  ses_09bfe0f75ffe4t4OmcWcNMNzpW.json  ses_09bff1369ffetNisla9K5oucKz.json  ses_09bff3752ffeE270N6L16ezB4a.json  ses_09bff3e76ffe3eZ7E2U0879mt7.json  ses_09bff72a3ffeqSX0bVOy0ajW29.json  ses_09bffee35ffeqb2iYKZnqPvgmU.json
crates/kernava-graph/: Cargo.toml
crates/kernava-graph/src/: cache.rs  impact.rs  lib.rs  louvain.rs  model.rs  traverse.rs
crates/kernava-indexer/: Cargo.toml
crates/kernava-indexer/benches/: benchmarks.rs
crates/kernava-indexer/src/: ast_dump_tests.rs  builder.rs  config.rs  extractor.rs  lib.rs  parser.rs  resolver.rs  watcher.rs
crates/kernava-indexer/src/languages/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  ts.rs
crates/kernava-indexer/tests/: integration.rs
crates/kernava-indexer/tests/fixtures/c-small/: main.c  shape.c
crates/kernava-indexer/tests/fixtures/cpp-small/: main.cpp
crates/kernava-indexer/tests/fixtures/cs-small/: calc.cs  main.cs
crates/kernava-indexer/tests/fixtures/go-small/: calc.go  main.go  math.go
crates/kernava-indexer/tests/fixtures/java-small/: calc.java  main.java
crates/kernava-indexer/tests/fixtures/js-small/: main.js  other.js  util.js
crates/kernava-indexer/tests/fixtures/php-small/: calc.php
crates/kernava-indexer/tests/fixtures/py-small/: calc.py  main.py  other.py  util.py
crates/kernava-indexer/tests/fixtures/rb-small/: calc.rb
crates/kernava-indexer/tests/fixtures/rs-small/: calc.rs  main.rs  math.rs  util.rs
crates/kernava-indexer/tests/fixtures/ts-chain/: a.ts  b.ts  c.ts
crates/kernava-indexer/tests/fixtures/ts-circular/: aaa.ts  bbb.ts
crates/kernava-indexer/tests/fixtures/ts-small/: colliding.ts  main.ts  other.ts  util.ts
crates/kernava-server/: Cargo.toml
crates/kernava-server/src/: handler.rs  lib.rs  main.rs
crates/kernava-server/tests/: integration.rs
crates/kernava-store/: Cargo.toml
crates/kernava-store/src/: fts5.rs  lib.rs  queries.rs
