[workspace]
members = [
    "crates/kernava-server",
    "crates/kernava-indexer",
    "crates/kernava-graph",
    "crates/kernava-store",
]
resolver = "2"

[workspace.dependencies]
# MCP
rmcp = { version = "2", features = ["server", "transport-streamable-http-server", "schemars"] }
# HTTP server (for streamable HTTP transport mounting)
axum = "0.7"

# Async utilities (CancellationToken for graceful shutdown)
tokio-util = "0.7"

# Parsing
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

# Storage
rusqlite = { version = "0.32", features = ["bundled", "blob"] }

# Parallelism
rayon = "1.10"

# File watching
notify = "7.0"

# Fast hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# In-RAM concurrent state
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Regex
regex = "1.11"

# File discovery (gitignore-aware)
ignore = "0.4"

# Benchmarking
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

