[package]
name = "kernava-graph"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nordicnode/kernava-mcp"

[dependencies]
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
kernava-store = { path = "../kernava-store" }

[dev-dependencies]
kernava-indexer = { path = "../kernava-indexer" }
