[package]
name = "kernava-server"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nordicnode/kernava-mcp"

[[bin]]
name = "kernava"
path = "src/main.rs"

[dependencies]
kernava-store = { path = "../kernava-store" }
kernava-graph = { path = "../kernava-graph" }
kernava-indexer = { path = "../kernava-indexer" }
rmcp = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }
